--- a/kubernetes/frontend-service.yaml
+++ b/kubernetes/frontend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: streamlit
-  namespace: hieunq95
+  namespace: model-serving
 spec:
   selector:
     app: mydeployment
