feat: add NGINX API gateway

--- a/kubernetes/helm-chart/templates/frontend-service.yaml
+++ b/kubernetes/helm-chart/templates/frontend-service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: streamlit
   namespace: {{ .Values.namespace }}
+  labels:
+    app: frontend 
 spec:
   selector:
     app: frontend
@@ -10,5 +12,4 @@ spec:
     - protocol: TCP
       port: {{ .Values.frontend.service.port }}
       targetPort: {{ .Values.frontend.service.targetPort }}
-      nodePort: {{ .Values.frontend.service.nodePort }}
   type: {{ .Values.frontend.service.type }}
