--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DOCKER_USER="hieunq95"
 PROJECT="tiny-llm-agent"
 # rag-pipeline images & containers
 RAG_IMAGE_NAME="rag-pipeline"
-RAG_IMAGE_TAG="v0.1.0"
+RAG_IMAGE_TAG="v0.1.1"
 RAG_CONTAINER_NAME="rag-pipeline"
 RAG_PORT=8000
 # streamlit images & containers
@@ -27,3 +27,8 @@ COLLECTOR_ZIPKIN_HOST_PORT=9411
 JAEGER_COLLECTOR_PORT=14268
 OTEL_EXPORTER_OTLP_ENDPOINT="http://jaeger:4317"
 OTEL_TRACES_EXPORTER="otlp"
+# NGINX images & containers
+NGINX_IMAGE_NAME="nginx"
+NGINX_CONTAINER_NAME="nginx"
+NGINX_PORT=8080
+NGINX_IMAGE_TAG="v0.1.0"
