--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,11 +61,19 @@ services:
     container_name: "${STREAMLIT_CONTAINER_NAME}"
     ports:
       - "${STREAMLIT_PORT}:${STREAMLIT_PORT}"
+    expose:
+      - "STREAMLIT_PORT"
     networks:
       - local-net
     depends_on: 
       rag-pipeline:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
+      interval: 20s
+      timeout: 10s
+      retries: 25
+      start_period: 60s
 
   jaeger:
     image: jaegertracing/all-in-one:${JAEGER_IMAGE_TAG}
@@ -82,6 +90,19 @@ services:
       - COLLECTOR_OTLP_ENABLED=true
     networks:
       - local-net
+
+  nginx:
+    build: 
+      context: nginx/
+    env_file: .env
+    image: "${NGINX_IMAGE_NAME}:${NGINX_IMAGE_TAG}"
+    container_name: "${NGINX_CONTAINER_NAME}"
+    ports:
+      - "${NGINX_PORT}:80"  
+    networks:
+      - local-net
+    depends_on:
+      - streamlit
 
 networks:
   local-net:
