--- a/kubernetes/helm-chart/templates/backend-service.yaml
+++ b/kubernetes/helm-chart/templates/backend-service.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rag-pipeline
-  namespace: {{ .Values.namespace }}
 spec:
+  type: NodePort 
   selector:
-    app: backend
+    app: rag-pipeline
   ports:
     - protocol: TCP
-      port: {{ .Values.backend.service.port }}
-      targetPort: {{ .Values.backend.service.targetPort }}
-      nodePort: {{ .Values.backend.service.nodePort }}
-  type: {{ .Values.backend.service.type }}
+      port: {{ .Values.backend.port }}
+      targetPort: {{ .Values.backend.port }}
+      nodePort: {{ .Values.backend.nodePort }}
