--- a/kubernetes/helm-chart/templates/frontend-deployment.yaml
+++ b/kubernetes/helm-chart/templates/frontend-deployment.yaml
@@ -1,23 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
-  namespace: {{ .Values.namespace }}
+  name: streamlit
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: frontend
+      app: streamlit
   template:
     metadata:
       labels:
-        app: frontend
+        app: streamlit
     spec:
       containers:
-        - name: frontend
-          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
-          imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
-          resources:
-            {{- toYaml .Values.frontend.resources | nindent 12 }}
-          ports:
-            - containerPort: {{ .Values.frontend.service.targetPort }}
+      - name: streamlit
+        image: "{{ .Values.frontend.image.name }}:{{ .Values.frontend.image.tag }}"
+        imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
+        ports:
+        - containerPort: {{ .Values.frontend.port }}
+        livenessProbe:
+          httpGet:
+            path: /_stcore/health
+            port: {{ .Values.frontend.port }}
+          initialDelaySeconds: 60
+          periodSeconds: 20
+          timeoutSeconds: 10
+          failureThreshold: 25
