--- a/kubernetes/helm-chart/templates/frontend-service.yaml
+++ b/kubernetes/helm-chart/templates/frontend-service.yaml
@@ -2,14 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: streamlit
-  namespace: {{ .Values.namespace }}
-  labels:
-    app: frontend 
 spec:
+  type: NodePort
   selector:
-    app: frontend
+    app: streamlit
   ports:
     - protocol: TCP
-      port: {{ .Values.frontend.service.port }}
-      targetPort: {{ .Values.frontend.service.targetPort }}
-  type: {{ .Values.frontend.service.type }}
+      port: {{ .Values.frontend.port }}
+      targetPort: {{ .Values.frontend.port }}
+      nodePort: {{ .Values.frontend.nodePort }}
