fix: volume path error

--- a/kubernetes/helm-chart/templates/backend-deployment.yaml
+++ b/kubernetes/helm-chart/templates/backend-deployment.yaml
@@ -38,11 +38,8 @@ spec:
           failureThreshold: 25
       volumes:
       - name: models-volume
-        hostPath:
-          path: {{ .Values.backend.volumes.models.hostPath }}
+        emptyDir: {}
       - name: examples-volume
-        hostPath:
-          path: {{ .Values.backend.volumes.examples.hostPath }}
+        emptyDir: {}
       - name: vector-store-volume
-        hostPath:
-          path: {{ .Values.backend.volumes.vectorStore.hostPath }}
+        emptyDir: {}
