--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 .vscode
 rag-pipeline/models
 rag-pipeline/vector_store
-rag-pipeline/test/__pycache__
-rag-pipeline/test/.pytest_cache
+rag-pipeline/tests/__pycache__
+rag-pipeline/tests/.pytest_cache
 rag-pipeline/src/__pycache__
 rag-pipeline/reports
 rag-pipeline/*.xml
